--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name=".UserRegistrationActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".WorkspaceFilesActivity"
+            android:label="@string/title_activity_workspace_files" >
+        </activity>
     </application>
 
 </manifest>
