wifi direct: start implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,3 +26,12 @@ dependencies {
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
 }
+
+dependencies {
+    compile(name:'Termite-WifiP2P-API-20150419', ext:'aar')
+}
+repositories{
+    flatDir{
+        dirs 'libs'
+    }
+}
