--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:replace="android:icon">
-
+        tools:replace="android:icon"
+        android:name="AirdeskApp">
         <activity
             android:name=".AirdeskActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -36,6 +37,14 @@
 
         <service android:name="pt.inesc.termite.wifidirect.service.SimWifiP2pService" />
 
+        <activity
+            android:name=".WifiDirectActivity"
+            android:label="@string/title_activity_wifi_direct"
+            android:parentActivityName=".AirdeskActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pt.ulisboa.tecnico.cmov.airdesk.AirdeskActivity" />
+        </activity>
     </application>
 
 </manifest>
